--- a/coffee.html
+++ b/coffee.html
@@ -8,6 +8,8 @@
     <title>Coffee Shop</title>
     <link rel="icon" href="img/dark half logo.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
     <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="style.css">
@@ -235,7 +237,7 @@
  <nav class="responsivenav">
   <div class="nav-bar">
       <i class='bx bx-menu sidebarOpen'></i>
-      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img  style="height: 100px; text-indent: 10px;padding-left: 25px;"
               src="img/light full logo.png" alt=""></a>
 
       <div class="menu">
@@ -287,7 +289,7 @@
       <div class="row portfolio-container">
 
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Doppio coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -296,7 +298,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Caffe Americano coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -305,7 +307,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Caffe latte coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -314,7 +316,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Cappucino coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -323,7 +325,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Caffe mocha coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -332,7 +334,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Mocha dalgona coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -341,7 +343,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Iced mocha coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -350,7 +352,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/cold coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -359,7 +361,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Black coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -368,7 +370,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Espresso coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -377,7 +379,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/hot coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -491,6 +493,12 @@
         nonce="39LCxC4V"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+        
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 
     <!-- javascripting for navbar -->
 
