--- a/contactus.html
+++ b/contactus.html
@@ -8,6 +8,8 @@
     <title>Coffee Time-Contact Us</title>
     <link rel="icon" href="img/dark half logo.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
    <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="style.css">
@@ -40,7 +42,7 @@
  <nav class="responsivenav">
     <div class="nav-bar">
         <i class='bx bx-menu sidebarOpen'></i>
-        <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+        <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img  style="height: 100px; text-indent: 10px;padding-left: 25px;"
                 src="img/light full logo.png" alt=""></a>
 
         <div class="menu">
@@ -88,20 +90,20 @@
 
 
 
-    <div class="row w-100 campuses" style=" margin: 0px;">
-        <div class="col-md-4">
+    <div class="row w-100 campuses" style=" margin: 0px;" >
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>DHA Phase 6 Branch (Head Office)</b></h5>
             50C, Shahbaz lane 4, D.H.A Phase 6, Defence Housing <br> Authority, Karachi, <br>
 
 021-35893385 / 35388455 / 35386815 / 0302- <br>2545809
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>DHA Phase 4 Branch</b></h5>
             73-C, 9th Commercial Street, Phase 4, DHA, Karachi. <br>
 
 021-35887865 / 0331 3730363
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>Gulshan Branch</b></h5>
             E4, First Floor, Maqbool Heights, Main NIPA Chowrangi, <br> Above Mobile World. Block 10, Gulshan-e-Iqbal, Karachi. <br>
 
@@ -112,19 +114,19 @@
 
 
     <div class="row w-100 campuses" style="padding-top: 0px; margin: 0px;">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>Bahadurabad Branch</b></h5>
             Mezzanine Floor, Alamgir Heights, Alamgir Road, Near <br> Sharfabad Chowrangi, Bahadurabad, Karachi. <br>
 
             021-34911161/ 34921180 / 0303-2267893
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>North Nazimabad Branch I</b></h5>
             C-17, Block I, 5-Star Chowrangi, Near Depilex Beauty <br> Parlor, North Nazimabad, Karachi. <br>
 
             021-36631160 / 36634284 / 0321-2333114
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>North Nazimabad Branch II</b></h5>
             2nd Floor Saima Paari View, B-99 Block H, North <br> Nazimabad, near Donisl Snacks. <br>
 
@@ -134,7 +136,7 @@
 
 
     <div class="row w-100 campuses" style="padding-top: 0px; margin: 0px;">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="zoom-out">
             <h5><b>North Karachi (UP More Branch)</b></h5>
             A-985 Sector 11-B Second floor Main U.P More bus stop <br> North Karachi ,Karachi <br>
 
@@ -160,7 +162,7 @@
     <!-- contactus form -->
 
 
-    <div class="container">
+    <div class="container" data-aos="zoom-out-right">
         <div class="container" style="margin-top: 50px; border-radius: 40px; margin: 0px; background-color: #4b2d16;">
             <div class="row" style="margin-top: 0px; padding: 0px;">
                 <form class="needs-validation col-12 col-md-8" onsubmit="user()" action="https://mahnoor643.github.io/Coffee-Time/home.html" method="get" style="color:#f3e8e8; padding: 60px;">
@@ -349,6 +351,13 @@
     nonce="39LCxC4V"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js"
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+
+    
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 
 <!-- javascripting for navbar -->
 
