--- a/drink.html
+++ b/drink.html
@@ -8,6 +8,8 @@
     <title>Coffee Shop</title>
     <link rel="icon" href="img/dark half logo.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
     <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="style.css">
@@ -234,7 +236,7 @@
  <nav class="responsivenav">
   <div class="nav-bar">
       <i class='bx bx-menu sidebarOpen'></i>
-      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img  style="height: 100px; text-indent: 10px;padding-left: 25px;"
               src="img/light full logo.png" alt=""></a>
 
       <div class="menu">
@@ -275,7 +277,7 @@
       <div class="row portfolio-container">
 
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Lemonade Slushie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -284,7 +286,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Tropical Peaflower Margarita.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -293,7 +295,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Mojito Margarita.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -302,7 +304,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Blue Lagoon Mocktail.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -311,7 +313,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Strawberry Daiquiri.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -320,7 +322,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Cocktail.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -329,7 +331,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Smoothie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -338,7 +340,7 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
             <img src="img(shop)/Dulce De Leche Milkshake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -459,6 +461,13 @@
         nonce="39LCxC4V"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+
+        
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 
     <!-- javascripting for navbar -->
 
