--- a/registrationform.html
+++ b/registrationform.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration form</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
     <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="style.css">
@@ -43,7 +45,7 @@
  <nav class="responsivenav">
     <div class="nav-bar">
         <i class='bx bx-menu sidebarOpen'></i>
-        <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+        <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img  style="height: 100px; text-indent: 10px;padding-left: 25px;"
                 src="img/light full logo.png" alt=""></a>
 
         <div class="menu">
@@ -79,7 +81,7 @@
 <!-- registration form -->
 
 
-<div class="container" style="margin-top: 80px; " >
+<div class="container" style="margin-top: 80px; " data-aos="zoom-out-right">
     <form method="GET" onsubmit="reuser()">
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label"><b>Email address</b></label>
@@ -193,6 +195,13 @@
     nonce="39LCxC4V"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js"
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+
+    
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 
 <!-- javascripting for navbar -->
 
