--- a/cake.html
+++ b/cake.html
@@ -8,6 +8,8 @@
     <title>Coffee Shop</title>
     <link rel="icon" href="img/dark half logo.png" type="image/png" sizes="30x30">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 
     <!-- ===== CSS ===== -->
     <link rel="stylesheet" href="style.css">
@@ -235,7 +237,7 @@
  <nav class="responsivenav">
   <div class="nav-bar">
       <i class='bx bx-menu sidebarOpen'></i>
-      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img style="height: 100px; text-indent: 10px;padding-left: 25px;"
+      <a href="https://mahnoor643.github.io/Coffee-Time/index.html"><img  style="height: 100px; text-indent: 10px;padding-left: 25px;"
               src="img/light full logo.png" alt=""></a>
 
       <div class="menu">
@@ -277,16 +279,16 @@
       <div class="row portfolio-container">
 
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Chimney CAKE.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Chimney CAKE.jpg"  style="height: 300px; width: 360px;" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Chimney Cake</h4>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 portfolio-item coffee">
+        <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/chocolate cherry mousse.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -295,7 +297,7 @@
             </div>
           </div>
         
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/MARKIZA CAKE.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -304,7 +306,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/mini cheese cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -313,7 +315,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Apple cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -322,7 +324,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/banana cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -331,7 +333,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/ice cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -340,7 +342,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/fruit cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -349,7 +351,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Ricotta kunafa rolls.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -358,7 +360,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Cream-filled croissant.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -367,7 +369,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/French resberry croissant.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -376,7 +378,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Icecream waffle sandwich.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -385,7 +387,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/butter cookies.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -394,7 +396,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/cumin biscuits.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -403,7 +405,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Meringue cookies.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -412,7 +414,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item coffee">
+          <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
               <img src="img(shop)/Brownie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -609,6 +611,11 @@
 
 
     </script>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 
 
     <!-- javascripting for navbar locating top on scrolling -->
