--- a/aboutus.html
+++ b/aboutus.html
@@ -240,11 +240,14 @@
     </div>
    <!-- footer -->
 
-   <footer style="background-color: #f3e8e8;">
+  <!-- footer -->
+
+  <footer style="background-color: #f3e8e8;">
     <div class="w-100"><br>
 
         <div
-            style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7; padding: 17px;">
+        class="querySet3"
+            style="justify-content: center; text-align: center; background-color: #21120A; color: #C5C6C7;">
             <h5><b>Get your First munch</b></h5>
             <a href="https://mahnoor643.github.io/Coffee-Time/registrationform.html"> <button class="sign-in">Sign In</button></a>
             <p>New comers? Register here for ordering</p>
@@ -311,6 +314,7 @@
         </div>
     </div>
 </footer>
+
 
 
 
