--- a/drink.html
+++ b/drink.html
@@ -279,7 +279,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Lemonade Slushie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Lemonade Slushie.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Lemonade Slushie</h4>
             </div>
@@ -288,7 +288,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Tropical Peaflower Margarita.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Tropical Peaflower Margarita.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Tropical Peaflower Margarita</h4>
             </div>
@@ -297,7 +297,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Mojito Margarita.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Mojito Margarita.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Mojito Margarita</h4>
             </div>
@@ -306,7 +306,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Blue Lagoon Mocktail.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Blue Lagoon Mocktail.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Blue Lagoon Mocktail</h4>
             </div>
@@ -315,7 +315,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Strawberry Daiquiri.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Strawberry Daiquiri.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Strawberry Daiquiri</h4>
             </div>
@@ -324,7 +324,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Cocktail.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Cocktail.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Cocktail</h4>
             </div>
@@ -333,7 +333,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Smoothie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Smoothie.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Smoothie</h4>
             </div>
@@ -342,7 +342,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Dulce De Leche Milkshake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Dulce De Leche Milkshake.jpg"  class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Dulce De Leche Milkshake</h4>
             </div>
