--- a/cake.html
+++ b/cake.html
@@ -281,7 +281,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Chimney CAKE.jpg"  style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Chimney CAKE.jpg"  class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Chimney Cake</h4>
             </div>
@@ -290,7 +290,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/chocolate cherry mousse.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/chocolate cherry mousse.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Chocolate Cherry Mousse</h4>
               </div>
@@ -299,7 +299,7 @@
         
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/MARKIZA CAKE.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/MARKIZA CAKE.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Markiza Cake</h4>
               </div>
@@ -308,7 +308,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/mini cheese cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/mini cheese cake.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Mini Cheese Cake</h4>
               </div>
@@ -317,7 +317,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Apple cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Apple cake.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Apple Cake</h4>
               </div>
@@ -326,7 +326,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/banana cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/banana cake.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Banana Cake</h4>
               </div>
@@ -335,7 +335,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/ice cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/ice cake.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Ice Cake</h4>
               </div>
@@ -344,7 +344,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/fruit cake.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/fruit cake.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Fruit Cake</h4>
               </div>
@@ -353,7 +353,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Ricotta kunafa rolls.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Ricotta kunafa rolls.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Ricotta Kunafa Rolls</h4>
               </div>
@@ -362,7 +362,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Cream-filled croissant.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Cream-filled croissant.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Cream-filled Croissant</h4>
               </div>
@@ -371,7 +371,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/French resberry croissant.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/French resberry croissant.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>French Resberry Croissant</h4>
               </div>
@@ -380,7 +380,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Icecream waffle sandwich.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Icecream waffle sandwich.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Icecream Waffle Sandwich</h4>
               </div>
@@ -389,7 +389,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/butter cookies.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/butter cookies.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Butter Cookies</h4>
               </div>
@@ -398,7 +398,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/cumin biscuits.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/cumin biscuits.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Cumin Biscuits</h4>
               </div>
@@ -407,7 +407,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Meringue cookies.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Meringue cookies.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Meringue Cookies</h4>
               </div>
@@ -416,7 +416,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Brownie.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Brownie.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Brownie</h4>
               </div>
