--- a/coffee.html
+++ b/coffee.html
@@ -291,7 +291,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
           <div class="portfolio-wrap">
-            <img src="img(shop)/Doppio coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+            <img src="img(shop)/Doppio coffee.jpg" class="img-fluid querySet4" alt="">
             <div class="portfolio-info">
               <h4>Doppio Coffee</h4>
             </div>
@@ -300,7 +300,7 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Caffe Americano coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Caffe Americano coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Caffe Americano Coffee</h4>
               </div>
@@ -309,7 +309,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Caffe latte coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Caffe latte coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Caffe Latte Coffee</h4>
               </div>
@@ -318,7 +318,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Cappucino coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Cappucino coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Cappucino Coffee</h4>
               </div>
@@ -327,7 +327,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Caffe mocha coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Caffe mocha coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Caffe Mocha Coffee</h4>
               </div>
@@ -336,7 +336,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Mocha dalgona coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Mocha dalgona coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Mocha Dalgona Coffee</h4>
               </div>
@@ -345,7 +345,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Iced mocha coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Iced mocha coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Iced Mocha Coffee</h4>
               </div>
@@ -354,7 +354,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/cold coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/cold coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Cold Coffee</h4>
               </div>
@@ -363,7 +363,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Black coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Black coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Black Coffee</h4>
               </div>
@@ -372,7 +372,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/Espresso coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/Espresso coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Espresso Coffee</h4>
               </div>
@@ -381,7 +381,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item coffee" data-aos="zoom-in">
             <div class="portfolio-wrap">
-              <img src="img(shop)/hot coffee.jpg" style="height: 300px; width: 360px;" class="img-fluid" alt="">
+              <img src="img(shop)/hot coffee.jpg" class="img-fluid querySet4" alt="">
               <div class="portfolio-info">
                 <h4>Hot Coffee</h4>
               </div>
