--- a/contactus.html
+++ b/contactus.html
@@ -322,7 +322,7 @@
                 <img src="img/light half logo.png" height="50px">
             </div>
             <div class=" col-12 col-md-6" style="padding: 25px; color:grey;">
-                <p>Copyright © 2023,Coffee Time,All rights reserved</p>
+                <p>Copyright © 2023,Template by <a href="https://github.com/mahnoor643" style="color: white; text-decoration: none;">Mahnoor</a>,All rights reserved</p>
             </div>
 
         </div>
